Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78235

Implicit conversion warning in QList on compiler for iOS

XMLWordPrintable

    • iOS/tvOS/watchOS, macOS
    • 2d8b80bb9c623c246c3815c3fd32cbd6392dc27b (qt/qtbase/5.13)

      At time of build for iOS for iPhone 6SE got warnings about implicit conversion. See the logs:

      In file included from /Users/alexandr/Tools/qt/5.13.1/ios/include/QtCore/QObject:1:
      In file included from /Users/alexandr/Tools/qt/5.13.1/ios/include/QtCore/qobject.h:49:
      In file included from /Users/alexandr/Tools/qt/5.13.1/ios/include/QtCore/qlist.h:1166:
      /Users/alexandr/Tools/qt/5.13.1/ios/include/QtCore/qstringlist.h:275:23: note: in instantiation of function template specialization 'QtPrivate::lastIndexOf<QString, QLatin1String>' requested here
      return QtPrivate::lastIndexOf<QString, QLatin1String>(*this, string, from);
      
      In file included from /Users/alexandr/Tools/qt/5.13.1/ios/include/QtCore/QObject:1:
      In file included from /Users/alexandr/Tools/qt/5.13.1/ios/include/QtCore/qobject.h:49:
      /Users/alexandr/Tools/qt/5.13.1/ios/include/QtCore/qlist.h:1034:26: warning: implicit conversion loses integer precision: 'long' to 'int' [-Wshorten-64-to-32]
      return n - b;
      
      In file included from /Users/alexandr/Tools/qt/5.13.1/ios/include/QtCore/QObject:1:
      In file included from /Users/alexandr/Tools/qt/5.13.1/ios/include/QtCore/qobject.h:49:
      In file included from /Users/alexandr/Tools/qt/5.13.1/ios/include/QtCore/qlist.h:1166:
      /Users/alexandr/Tools/qt/5.13.1/ios/include/QtCore/qstringlist.h:270:23: note: in instantiation of function template specialization 'QtPrivate::lastIndexOf<QString, QStringView>' requested here
      return QtPrivate::lastIndexOf<QString, QStringView>(*this, string, from);
      
      In file included from /Users/alexandr/Tools/qt/5.13.1/ios/include/QtCore/QObject:1:
      In file included from /Users/alexandr/Tools/qt/5.13.1/ios/include/QtCore/qobject.h:49:
      /Users/alexandr/Tools/qt/5.13.1/ios/include/QtCore/qlist.h:1034:26: warning: implicit conversion loses integer precision: 'long' to 'int' [-Wshorten-64-to-32]
      return n - b;
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cnn Qt Core & Network
            bogong Alexandr KIRILOV
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes