QList: make cast from ptrdiff_t to int explicit

Amends ffc2d5722317fcab86865b11491d7bf7fef3e16d.

Fixes: QTBUG-78235
Change-Id: Ie91d8d71c92bb62e3268847407b7b252c382d700
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>